@@ -1,5 +1,5 @@
 dnl configure.in: Autoconfigure input file for agoris 
-dnl $Id: configure.in,v 1.1 2001/07/16 19:10:06 baueran Exp $
+dnl $Id: configure.in,v 1.2 2001/07/25 15:07:27 baueran Exp $
 dnl
 dnl Copyright (c) 2001  Andreas Bauer <baueran@in.tum.de>
 dnl  
@@ -25,7 +25,7 @@ dnl distribution terms that you use for the rest of that program.
 dnl  
 
 
-AC_REVISION($Revision: 1.1 $)
+AC_REVISION($Revision: 1.2 $)
 AC_INIT(agoris/Board.cc)
 AM_INIT_AUTOMAKE(agoris, 0.0.1)
 AM_MAINTAINER_MODE
@@ -51,7 +51,8 @@ AC_CHECK_FUNCS(gettimeofday regcomp snprintf)
 
 AC_OUTPUT([Makefile
            macros/Makefile
-	       doc/Makefile
+	   doc/Makefile
            doc/Doxyfile
            agoris/Makefile
+	   agoris.spec
            agoris-config])
